[package]
name = "cs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "cs"
path = "src/main.rs"

[dependencies]
tui = "0.19"
crossterm = "0.25"
unicode-width = "0.1"